[project]
name = "video-thumbnail-grid-maker"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet==0.26.0",
  "opencv-python==4.11.0.86",
  "pillow==11.1.0"
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "xuu6770.github.io"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "video-thumbnail-grid-maker"

# company name to display in about app dialogs
company = "RisingSun"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Aiden Lin"

[tool.flet.app]
path = "src"